tests/bad_reserved_name_var.stderr
tests/bad_reserved_name_var.hop:3:6: error: HOP2008: identifier prefix '__hop_' is reserved
tests/bad_reserved_name_var.hop:3:6: hint: HOP2008: rename symbol to avoid '__hop_' prefix
