tests/bad_reserved_name_var.hop
// Verifies bad reserved name variable.
fn main() {
	var __hop_bad i32
}
